--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,24 @@
 version: "3.8"
 services:
+  postgres:
+    container_name: inclusion_connect_postgres
+    image: "postgres:14"
+    env_file:
+      - docker/dev/dev.env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./docker/dev/postgres/psql_init.sh:/docker-entrypoint-initdb.d/postgres-init.sh
+    ports:
+      - 5433:5432
   keycloak:
-    build: .
+    container_name: inclusion_connect_keycloak
+    build:
+      dockerfile: docker/dev/keycloak/Dockerfile
+    volumes:
+      - ./themes/inclusion-connect/:/opt/keycloak/themes/inclusion-connect/
     ports:
       - 8080:8080
-    environment:
-      KEYCLOAK_USER: ${KEYCLOAK_USER}
-      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
-
-      SMTP_HOST: ${SMTP_HOST}
-      SMTP_PORT: ${SMTP_PORT}
-      SMTP_FROM_DISPLAY_NAME: ${SMTP_FROM_DISPLAY_NAME}
-      SMTP_FROM: ${SMTP_FROM}
-      SMTP_REPLYTO_DISPLAY_NAME: ${SMTP_REPLYTO_DISPLAY_NAME}
-      SMTP_REPLYTO: ${SMTP_REPLYTO}
-      SMTP_SSL: ${SMTP_SSL}
-      SMTP_AUTH: ${SMTP_AUTH}
-      SMTP_USER: ${SMTP_USER}
-      SMTP_PASSWORD: ${SMTP_PASSWORD}
-    # volumes:
-    #   - logvolume01:/var/log
+    env_file:
+      - docker/dev/dev.env
+volumes:
+  postgres_data:
