Use PostgreSQL as database
This will prevent dropping all the configuration each time a new
docker image is built.

--- a/docker/dev/keycloak/dev.env.template
+++ b/docker/dev/keycloak/dev.env.template
@@ -1,2 +1,15 @@
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=password
+
+# Postgres's root user credentials.
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+
+# Keycloak database data
+KC_DB=postgres
+KC_DB_URL_DATABASE=inclusion_connect
+KC_DB_URL_HOST=postgres
+KC_DB_URL_PORT=5432
+KC_DB_USERNAME=inclusion_connect
+KC_DB_SCHEMA=public
+KC_DB_PASSWORD=password
