--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3.8"
 services:
+  postgres:
+    container_name: inclusion_connect_postgres
+    image: "postgres:14"
+    env_file:
+      - docker/dev/keycloak/dev.env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./docker/dev/postgres/psql_init.sh:/docker-entrypoint-initdb.d/postgres-init.sh
+    ports:
+      - 5433:5432
   keycloak:
     container_name: inclusion_connect_keycloak
     build:
@@ -10,3 +20,5 @@ services:
       - 8080:8080
     env_file:
       - docker/dev/keycloak/dev.env
+volumes:
+  postgres_data:
