--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       - ./docker/dev/postgres/psql_init.sh:/docker-entrypoint-initdb.d/postgres-init.sh
     ports:
       - 5433:5432
+  smtp:
+    container_name: inclusion_connect_smtp
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025
+      - 8025:8025
   keycloak:
     container_name: inclusion_connect_keycloak
     build:
