--- a/themes/inclusion-connect/login/theme.properties
+++ b/themes/inclusion-connect/login/theme.properties
@@ -66,7 +66,7 @@ kcButtonPrimaryClass=fr-btn
 kcButtonDefaultClass=fr-btn--secondary
 # classes defining size of the button
 kcButtonLargeClass=fr-btn--lg
-kcButtonBlockClass=
+kcButtonBlockClass=fr-btn--block
 
 ##### css classes for input
 kcInputLargeClass=input-lg
