--- a/docker/dev/keycloak/Dockerfile
+++ b/docker/dev/keycloak/Dockerfile
@@ -1,5 +1,12 @@
+ARG GRADLE_CLI_OPTS=''
+FROM gradle:7.1.1-jdk11 AS build
+COPY ./keycloak-customisation /keycloak-customisation
+WORKDIR /keycloak-customisation
+RUN gradle clean jar
+
 # Dockerfile for local environment
-FROM quay.io/keycloak/keycloak:20.0.3
+FROM quay.io/keycloak/keycloak:20.0.0
+COPY --from=build keycloak-customisation/build/libs/pass-emploi-keycloak-customisation-0.0.1-SNAPSHOT.jar /opt/jboss/keycloak/standalone/deployments/pass-emploi-keycloak-customisation.jar
 # theme is mounted with docker file so that we don't have to create a new docker image
 # for every change in the theme.
 
